Bug 250146 - after scaling, cropping or rsizing, the wrong part of the image is shown, after undo the image is placed wrong
Summary: after scaling, cropping or rsizing, the wrong part of the image is shown, aft...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Unlisted Binaries Linux
: VHI critical
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: release_blocker
: 273357 273911 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-04 10:23 UTC by Dmitry Kazakov
Modified: 2011-11-13 08:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2010-09-04 10:23:05 UTC
Version:           svn trunk
OS:                Linux

This hotkey centers image to the last point clicked by the Zoom tool, but not to the center of the current screen.

Reproducible: Always
Comment 1 Dmitry Kazakov 2010-09-04 13:23:27 UTC
SVN commit 1171551 by dkazakov:

Fixed but when zooming with Ctrl-"+"/"-"

BUG:250146


 M  +1 -1      KoCanvasControllerWidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171551
Comment 2 animtim 2011-01-26 17:34:32 UTC
I don't know in 2.3.1 but in current git master (2.4alpha), the zoom-in and zoom-out shortcuts are not centered anymore.

Every other zoom method works as expected (centered on cursor position), like mouse wheel, intuos3 touchstrips, using the zoom tool.

Only the zoom-in/out shortcuts are affected.

Very annoying bug, please fix it.
Comment 3 Halla Rempt 2011-07-23 15:38:52 UTC
we're also getting the same problem when cropping, image scaling etc. Quite frustrating when doing real work, as I noticed during my holidays. This really is a critical bug: we cannot release without a fix.
Comment 4 Sven Langkamp 2011-08-15 00:15:14 UTC
*** Bug 273911 has been marked as a duplicate of this bug. ***
Comment 5 T Zachmann 2011-10-30 17:57:07 UTC
fixed by commit b85f2e520fb172bc7d1c7f07f8f9aa44ee03dda9
Comment 6 Halla Rempt 2011-10-30 18:41:51 UTC
However, the actual canvas update is broken. After scaling, we see a small part of the original image, not the scaled image.
Comment 7 Halla Rempt 2011-11-04 19:48:21 UTC
The original bug got fixed, so we have correct centering, but right now crop, resize, scale etc. are broken because the canvas takes the top-left of the image and shows that no matter what.
Comment 8 Halla Rempt 2011-11-04 19:48:44 UTC
*** Bug 273357 has been marked as a duplicate of this bug. ***
Comment 9 Halla Rempt 2011-11-04 20:16:44 UTC
On undo of crop, the positioning of the image on the canvas is still wrong.
Comment 10 David REVOY 2011-11-12 17:13:31 UTC
just a picture scenario of what happen with cropping tool :
http://img825.imageshack.us/img825/429/selection001.jpg
-> workaround to refresh at the end : make the layer blink ( hide/unhide with the little eye icon )
Comment 11 Dmitry Kazakov 2011-11-13 08:47:10 UTC
Git commit 929e498f0ba8cb8768ca5ae027253f9f14038fbe by Dmitry Kazakov.
Committed on 13/11/2011 at 10:45.
Pushed by dkazakov into branch 'master'.

Fixed updating after crop in QPainter canvas

BUG:250146

M  +0    -2    krita/plugins/tools/tool_crop/kis_tool_crop.cc
M  +5    -6    krita/ui/canvas/kis_prescaled_projection.cpp

http://commits.kde.org/calligra/929e498f0ba8cb8768ca5ae027253f9f14038fbe