Fixed but when zooming with Ctrl-"+"/"-"

BUG:250146

svn path=/trunk/koffice/; revision=1171551